# llm-tuning-lab

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.gpu  INFRASTRUCTURE_SUMMARY.md  LICENSE  Pipfile  README.md  check-quota-status.sh  docker-compose.yml  monitor-training.sh  pyproject.toml  pytest.ini
.github/: GITHUB_SETUP.md
.github/workflows/: build-push-ecr.yml
infra/: .gitignore  ARCHITECTURE.md  README.md
infra/envs/training/: main.tf  training.tfvars.example  variables.tf
infra/modules/training-compute/: main.tf  outputs.tf  setup-fixed.sh  user-data.sh  variables.tf
infra/modules/training-registry/: main.tf  outputs.tf  variables.tf
infra/modules/training-safety/: main.tf  outputs.tf  variables.tf
infra/modules/training-storage/: main.tf  outputs.tf  variables.tf
lab/: check_data.py  config.py  constants.py  data_processor.py  loader.py  train_lora.py  validate_apis.py
tests/: __init__.py  test_config.py  test_data_processor.py
