[tool.poetry]
name = "llm-tuning-lab"
version = "0.1.0"
description = "LLM fine-tuning and experimentation lab"
authors = ["Casey MacPhee <caseymacphee@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ipython = "^8.18.0"
black = "^23.11.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

