[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-tuning-lab"
version = "0.1.0"
description = "LLM fine-tuning and experimentation lab"
authors = [{name = "Casey MacPhee", email = "caseymacphee@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "datasets>=4.1.1",
    "peft>=0.17.1",
    "trl>=0.7.11",
    "pydantic-settings>=2.11.0",
    "click>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ipython>=9.6.0",
    "black>=25.9.0",
    "ruff>=0.13.3",
]

[tool.setuptools.packages.find]
include = ["lab*"]
